fx/navbar-logic-fix
-fixed issue with navbar not showing on page load

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -92,13 +92,13 @@
     height: 4rem;
     width: 100%;
     background-color: black;
-    transition: 0.7s;
+    
   }
 
 
   .hideNav{
     transform: translateY(-100%);
-    transition: 1s;
+    transition: 0.7s;
   }
 
   .navbar {
